--- a/src/App.css
+++ b/src/App.css
@@ -60,22 +60,25 @@
 
 .checkbox-input {
   position: absolute;
-  opacity: 1;
+  top: 2.5px;
+  left: 2.5px;
+  opacity: 0;
   cursor: pointer;
 }
 
 .checkmark {
   position: absolute;
-  top: 0;
-  left: 0;
-  height: 25px; 
-  width: 25px; 
+  top: 2.5px;
+  left: 2.5px;
+  height: 20px; 
+  width: 20px; 
   background-color: #FFFFFF;
-  border: 1px solid #40E0D0;
+  border: 2px solid #2E4A62;
 }
 
 .checkbox-input:checked ~ .checkmark {
-  background-color: #AFEEEE;
+  background-color: #2E4A62;
+  border: 2px solid #fff;
 }
 
 .checkbox-label {
